packages/ingest/container-rust/tests/ui/xmlspec/fail/invalid_guard_false.stderr
error: expected identifier, found keyword `false`
 --> tests/ui/xmlspec/fail/invalid_guard_false.rs:7:15
  |
7 |         where false
  |               ^^^^^
